FIX: Removida a quebra de layout no menu, devido ao atributo "z-index" do estilo "select.styled".

--- a/nimbus/base/templates/base_login.html
+++ b/nimbus/base/templates/base_login.html
@@ -21,6 +21,11 @@
 	<!--[if IE]><script type="text/javascript" src="js/excanvas.js"></script><![endif]-->
 	
 	<script type="text/javascript" src="/media/lib/js/jquery.js"></script>
+    <script type="text/javascript">
+    $(document).ready(function() {
+        $("#id_username").focus();
+    });
+    </script>
 	<script type="text/javascript" src="/media/lib/js/jquery.img.preload.js"></script>
 	<script type="text/javascript" src="/media/lib/js/jquery.filestyle.mini.js"></script>
 	<script type="text/javascript" src="/media/lib/js/jquery.wysiwyg.js"></script>
