Adequação dos formulários ao padrão django

--- a/nimbus/storages/templates/storages_add.html
+++ b/nimbus/storages/templates/storages_add.html
@@ -32,7 +32,7 @@
                 <div class="right">
                     <div class="floatright">
                         {% if not storage.active %}
-                        <form action="/storages/{{storage.id}}/activate/" method="post" class="floatright">
+                        <form action="/storages/{{storage.id}}/new/" method="post" class="floatright">
                             <input type="submit" class="submit tiny" value="Ativar"/>
                         </form>
                         {% endif %}
