--- a/nimbus/base/templates/base.html
+++ b/nimbus/base/templates/base.html
@@ -23,6 +23,14 @@
 	<!--[if IE]><script type="text/javascript" src="/media/lib/js/excanvas.js"></script><![endif]-->
 	
 	<script type="text/javascript" src="/media/lib/js/jquery.js"></script>
+    <script type="text/javascript">
+    // operations that should start on every page
+    $(document).ready(function(){
+        // style default form fields
+        $('select').addClass("styled");
+        $('input:text').addClass("text");
+    });
+    </script>
     <script type="text/javascript" src="/media/lib/js/jquery.filestyle.mini.js"></script>
 	<script type="text/javascript" src="/media/lib/js/jquery.wysiwyg.js"></script>
 	<script type="text/javascript" src="/media/lib/js/jquery.date_input.pack.js"></script>
@@ -48,27 +56,26 @@
 				<div class="hdrl"></div>
 				<div class="hdrr"></div>
 				
-				<div class="ico_nimbus"><img src="/media/lib/images/ico_nimbus.png" alt=""/></div>
-				<h1><a href="#">Nimbus</a></h1>
+				<div class="ico_nimbus"><a href="/"><img src="/media/lib/images/ico_nimbus.png" alt=""/></a></div>
+				<h1><a href="/">Nimbus</a></h1>
 				
 				<ul id="nav">
-					<li class="active"><a href="/base/home">Estatísticas</a></li>
 					<li class="active"><a href="#">Backup</a>
 					    <ul>
 					        <li><a href="/backup/add">Criar backup</a></li>
-                            <li><a href="/computers/list">Listar computador</a></li>
-                            <li><a href="/computers/add">Adicionar computador</a></li>
+                            <li><a href="/restore/view/">Restaurar Backup</a></li>
                             <li><a href="/procedures/profile/list">Listar perfis de configuração</a></li>
                             <li><a href="/procedures/list">Listar procedimentos</a></li>
-                            <li><a href="/storages/list">Listar Armazenamento</a></li>
-                            <li><a href="/storages/add">Adicionar Armazenamento</a></li>                            
                         </ul>
 					</li>
-					<li><a href="#">Restaurar</a>
+                    <li class="active"><a href="#">Computadores</a>
 					    <ul>
-                            <li><a href="/restore/view/">Executar restauração</a></li>
+                            <li><a href="/computers/list">Listar computador</a></li>
+                            <li><a href="/computers/add">Adicionar computador</a></li>
+                            <li><a href="/storages/list">Listar Armazenamento</a></li>
+                            <li><a href="/storages/add">Adicionar Armazenamento</a></li>
                         </ul>
-				    </li>
+					</li>
 				    <li class="active"><a href="#">Offsite</a>
 					    <ul>
     					    <li><a href="/offsite/detail">Detalhes do offsite</a></li>
@@ -131,3 +138,4 @@
 </body>
 </html>
 <!-- Localized -->
+
