Adição de scripts de execução automática

--- a/nimbus/base/templates/base.html
+++ b/nimbus/base/templates/base.html
@@ -23,14 +23,7 @@
 	<!--[if IE]><script type="text/javascript" src="/media/lib/js/excanvas.js"></script><![endif]-->
 	
 	<script type="text/javascript" src="/media/lib/js/jquery.js"></script>
-    <script type="text/javascript">
-    // operations that should start on every page
-    $(document).ready(function(){
-        // style default form fields
-        $('select').addClass("styled");
-        $('input:text').addClass("text");
-    });
-    </script>
+    <script type="text/javascript" src="/media/main.js"></script>
     <script type="text/javascript" src="/media/lib/js/jquery.filestyle.mini.js"></script>
 	<script type="text/javascript" src="/media/lib/js/jquery.wysiwyg.js"></script>
 	<script type="text/javascript" src="/media/lib/js/jquery.date_input.pack.js"></script>
