--- a/nimbus/backup/templates/backup_add.html
+++ b/nimbus/backup/templates/backup_add.html
@@ -46,7 +46,7 @@ $(document).ready(function() {
 		<h2>{{title}}</h2>
 	</div>
     <div class="block_content">
-        <form action="/backup/add/" method="post">
+        <form action="/procedures/do_add/" method="post">
         {% for form in forms %}
             {{ form.non_field_errors }}
             {% for field in form.visible_fields %}
