--- a/nimbus/base/templates/form.html
+++ b/nimbus/base/templates/form.html
@@ -1,11 +1,13 @@
 {{ form.non_field_errors }}
 {% for field in form.visible_fields %}
-  {% csrf_token %} 
-  {{ field.errors }}
-<p>
-    {{ field.label_tag }}<br/>{{ field }}
-</p>
+    {% csrf_token %}
+    {% if field.errors %}
+        {% for error in field.errors %}
+            <p class="error">{{ error }}</p>
+        {% endfor %}
+    {% endif %}
+    <p>{{ field.label_tag }}<br/>{{ field }}</p>
 {% endfor %}
 {% for hidden in form.hidden_fields %}
-  {{ hidden }}
+    {{ hidden }}
 {% endfor %}
