--- a/nimbus/session/templates/login.html
+++ b/nimbus/session/templates/login.html
@@ -21,8 +21,10 @@
     <form action="{% url django.contrib.auth.views.login  %}" method="post">
         {% include "form.html" %}
 
-        <p class="right">
+        <p class="set-right">
             <input type="checkbox" class="checkbox" checked="checked" id="rememberme" /> <label for="rememberme">Manter minha sessão ativa</label>
+        </p>
+        <p class="set-right">
             <input type="submit" class="submit" value="Acessar" /> &nbsp;
         </p>
 
