FIX: Bug árvore de restauração - restore. Não completo.

--- a/nimbus/restore/templates/restore_list.html
+++ b/nimbus/restore/templates/restore_list.html
@@ -118,7 +118,7 @@
                 </ul>
                 {% endif %}
                 <select name="job_id" class="styled" id="jobs_list">
-                    <option value=""> - Selecione um Job - </option>
+                    <option value=""> - Selecioneasas um Job - </option>
                 </select>
                 <div class="clear"></div>
             </div>
