Refactory inicial dos filesets

--- a/nimbus/backup/templates/fileset_new.html
+++ b/nimbus/backup/templates/fileset_new.html
@@ -15,7 +15,7 @@ $(document).ready(function(){
         //alert (dataString);
         $.ajax({
             type: "POST",
-            url: "/backup/filesets/add",
+            url: "/filesets/add",
             data: dataString,
             success: function() {
                 alert("Cadastro efetuado com sucesso!");
