Criação de uma base para páginas assíncronas. evitando incluir topo, menu e rodapé

--- a/nimbus/base/templates/base_async.html
+++ b/nimbus/base/templates/base_async.html
@@ -45,7 +45,7 @@
 </head>
 <body>
 	<div id="hld">
-		<div class="wrapper">
+		<div class="wrapper async">
             {%block content%}
             {%endblock%}
 
