--- a/nimbus/backup/templates/fileset_new.html
+++ b/nimbus/backup/templates/fileset_new.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %}
+{% extends "base_async.html" %}
 
 {% block headtags %}
 <script type="text/javascript" src="/media/lib/js/tree_plugin.js"></script>
@@ -25,8 +25,8 @@ $(document).ready(function(){
             }
         });
     });
-    $("#header").hide();
-    $("#footer").hide();
+    //$("#header").hide();
+    //$("#footer").hide();
 });
 </script>
 
